# fastapi-beyond-crud

./: .example.env  README.md  main.py  pyproject.toml
migration/: env.py
migration/versions/: 213debff195b_added_password_hash.py  336147a323f4_relate_users_to_books.py  8f847c56d043_add_review_table.py  a0955c0c7513_add_roles_to_users.py  e47b64600513_init.py
src/: __init__.py  celery_tasks.py  config.py  errors.py  mail.py  middlerware.py
src/auth/: dependencies.py  models.py  routes.py  schemas.py  service.py  utils.py
src/books/: books_data.py  models.py  routes.py  schema.py  service.py
src/db/: main.py  models.py  redis.py
src/reviews/: routes.py  schema.py  service.py
