[project]
name = "fastapi-beyond-crud"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "alembic>=1.18.3",
    "bcrypt>=5.0.0",
    "fastapi[standard]>=0.128.0",
    "jwt>=1.4.0",
    "passlib>=1.7.4",
    "sqlalchemy[asyncio]>=2.0.46",
    "sqlmodel>=0.0.31",
]
