[project]
name = "fastapi-beyond-crud"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "aioredis>=2.0.1",
    "alembic>=1.18.3",
    "asyncpg>=0.31.0",
    "bcrypt>=5.0.0",
    "fastapi-mail>=1.6.2",
    "fastapi[standard]>=0.128.0",
    "passlib>=1.7.4",
    "pyjwt>=2.11.0",
    "redis>=4.5",
    "sqlalchemy[asyncio]>=2.0.46",
    "sqlmodel>=0.0.31",
    "uvicorn>=0.40.0",
]
